public/css/style.css
html, body {
  height: 100%;
}

body{
    font-family: "Plus Jakarta Sans", sans-serif !important;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    padding-top: 5rem;
} 

.main-content {
  flex: 1;
}

.navbar{
    min-height: 5rem;
    background-color: white;
    flex-wrap: wrap;
}

.fa-compass{
    color: #fe424d;
    font-size: 2rem;
}

.nav-link{
    color: #222222 !important;
}

.site-footer{
  width:100%;
  background:#ebebeb;
  margin:0;
  padding:0;
}

.f-info {
  width: 100%;
  padding: 1.5rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
  text-align: center;
}

.f-info-socials,
.f-info-brand,
.f-info-links{
  width:100%;
}

.listing-card{
    border: none !important;
    margin-bottom: 2rem;
}

.card-img-top {
    border-radius: 1rem !important;
    width: 100% !important;
    object-fit: cover !important;
}

.card-body{
    padding: 1.25rem !important;
}

.card-text p {
    font-weight: 400 !important;
}

.listing-link {
    text-decoration: none;
}

.card-img-overlay{
    opacity: 0;
}

.card-img-overlay:hover{
    opacity: 0.2;
    background-color: white;
}

.add-btn{
    background-color: #fe424d !important;
    border: none !important;
}

.edit-btn{
    background-color: #fe424d !important;
    border: none !important;
}

.show-img{
    height: 30vh;
}

.btns{
    display: flex;
}

.show-card{
    padding-left: 0;
    padding-right: 0;
}

#map {
  height: 350px;
  width: 100% !important;
  max-width: 100% !important;
  display: block;
}

